--- a/SpreadSharp/SpreadSharp/SpreadSharp.fsproj
+++ b/SpreadSharp/SpreadSharp/SpreadSharp.fsproj
@@ -34,15 +34,25 @@
   <ItemGroup>
     <Reference Include="Microsoft.Office.Interop.Excel">
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft Visual Studio 11.0\Visual Studio Tools for Office\PIA\Office14\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core" />
+    <Reference Include="office">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft Visual Studio 11.0\Visual Studio Tools for Office\PIA\Office14\Office.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.fs" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="COM.fs" />
+    <Compile Include="Utilities.fs" />
+    <Compile Include="XApp.fs" />
+    <Compile Include="XWorkbook.fs" />
+    <Compile Include="XWorksheet.fs" />
+    <Compile Include="XRange.fs" />
     <None Include="Script.fsx" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
